//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id Int [pk, increment]
  user User [not null]
  providerType String [not null]
  providerId String [not null]
  providerAccountId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table User {
  id Int [pk, increment]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  createdQueues Queue [not null]
  ownedQueues Queue [not null]
  issues Issue [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Queue {
  id Int [pk, increment]
  key String [unique, not null]
  description String
  createdBy User [not null]
  owner User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Issue {
  id Int [pk, increment]
  key String [unique, not null]
  kind IssueKind [not null]
  createdBy User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table IssueKind {
  id Int [pk, increment]
  kind String [unique, not null]
  issues Issue [not null]
  fields Field [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Field {
  id Int [pk, increment]
  name String [unique, not null]
  issueKinds IssueKind [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table fields {
  fieldsId Int [ref: > Field.id]
  issuekindsId Int [ref: > IssueKind.id]
}

Ref: Account.id > User.id

Ref: Queue.id > User.id

Ref: Queue.id > User.id

Ref: Issue.id > IssueKind.id

Ref: Issue.id > User.id